# services/constructor/src/Controllers/ProjectApi.cs
@@ -14,40 +14,19 @@ using Swashbuckle.AspNetCore.Annotations;
 using Swashbuckle.AspNetCore.SwaggerGen;
 using Newtonsoft.Json;
 using System.ComponentModel.DataAnnotations;
-using AwsomeConstructor.Attributes;
+using AwsomeElectricians.Attributes;
 
 using Microsoft.AspNetCore.Authorization;
 using AwsomeConstructor.Models;
 
 namespace AwsomeConstructor.Controllers
-{
+{ 
     /// <summary>
     /// 
     /// </summary>
     [ApiController]
     public class ProjectApiController : ControllerBase
-    {
-        /// <summary>
-        /// Request to start the project
-        /// </summary>
-        /// <remarks>In the event that a HRC decides AwsomeContructor as the winner, the HRC informs PlumberBrothersto start working on the project.</remarks>
-        /// <param name="id">Id of the quotation request</param>
-        /// <response code="200">ok</response>
-        /// <response code="0">Exception happened!</response>
-        [HttpPost]
-        [Route("/v1/NewProject")]
-        [ValidateModelState]
-        [SwaggerOperation("NewProjectPOST")]
-        public virtual IActionResult NewProjectPOST([FromQuery][Required()] int? id)
-        {
-            //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
-            // return StatusCode(200);
-
-            //TODO: Uncomment the next line to return response 0 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
-            // return StatusCode(0);
-            return Ok("Request Inserted Successfully");
-        }
-
+    { 
         /// <summary>
         /// Gets completion status of the project
         /// </summary>
@@ -56,22 +35,46 @@ namespace AwsomeConstructor.Controllers
         /// <response code="200">Ok</response>
         /// <response code="0">Exception happened!</response>
         [HttpGet]
-        [Route("/v1/ProjectCompletionStatusById/{id}")]
+        [Route("/v1/Project/{id}")]
         [ValidateModelState]
         [SwaggerOperation("ProjectCompletionStatusIdGET")]
         [SwaggerResponse(statusCode: 200, type: typeof(bool?), description: "Ok")]
-        public virtual IActionResult ProjectCompletionStatusByIdGET([FromRoute][Required] int? id)
-        {
+        public virtual IActionResult ProjectCompletionStatusIdGET([FromRoute][Required]int? id)
+        { 
             //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
             // return StatusCode(200, default(bool?));
 
             //TODO: Uncomment the next line to return response 0 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
             // return StatusCode(0);
-            bool status = id % 2 == 0 ? true : false;
+            string exampleJson = null;
+            exampleJson = "true";
+            
+                        var example = exampleJson != null
+                        ? JsonConvert.DeserializeObject<bool?>(exampleJson)
+                        : default(bool?);            //TODO: Change the data returned
+            return new ObjectResult(example);
+        }
 
+        /// <summary>
+        /// Request to start the project
+        /// </summary>
+        /// <remarks>In the event that a HRC decides AwsomeContructor as the winner, the HRC informs PlumberBrothersto start working on the project.</remarks>
+        /// <param name="body">RequestForQuotation</param>
+        /// <response code="200">ok</response>
+        /// <response code="0">Exception happened!</response>
+        [HttpPost]
+        [Route("/v1/Project")]
+        [ValidateModelState]
+        [SwaggerOperation("ProjectPOST")]
+        public virtual IActionResult ProjectPOST([FromBody]Project body)
+        { 
+            //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(200);
 
-            return Ok(status);
+            //TODO: Uncomment the next line to return response 0 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(0);
 
+            throw new NotImplementedException();
         }
     }
 }
